@@ -57,6 +57,8 @@ def edit_plans(message):
 
 @bot.callback_query_handler(func=lambda call: call.data == "add_plan")
 def handle_add_plan(call):
+    if not is_admin(call.from_user.id):
+        return
     bot.answer_callback_query(call.id)
     msg = bot.edit_message_text(
         "Enter the plan size in GB (e.g., 30):",
@@ -67,6 +69,8 @@ def handle_add_plan(call):
 
 @bot.callback_query_handler(func=lambda call: call.data.startswith("select_plan:"))
 def handle_plan_select(call):
+    if not is_admin(call.from_user.id):
+        return
     try:
         bot.answer_callback_query(call.id)
         index = int(call.data.split(':')[1])
@@ -77,6 +81,7 @@ def handle_plan_select(call):
             
             markup = types.InlineKeyboardMarkup(row_width=1)
             markup.add(
+                types.InlineKeyboardButton("✏️ Edit", callback_data=f"edit_plan:{gb}"),
                 types.InlineKeyboardButton("🗑️ Delete", callback_data=f"confirm_delete_plan:{gb}"),
                 types.InlineKeyboardButton("⬅️ Back", callback_data="back_to_plans")
             )
@@ -96,8 +101,163 @@ def handle_plan_select(call):
         print(f"DEBUG: Error in handle_plan_select: {str(e)}")
         bot.answer_callback_query(call.id, text=f"Error: {str(e)}")
 
+@bot.callback_query_handler(func=lambda call: call.data.startswith("edit_plan:"))
+def handle_edit_plan(call):
+    if not is_admin(call.from_user.id):
+        return
+    try:
+        bot.answer_callback_query(call.id)
+        gb = call.data.split(':')[1]
+        plans = load_plans()
+        
+        if str(gb) not in plans:
+            bot.send_message(call.message.chat.id, "Plan not found.")
+            return
+
+        markup = types.InlineKeyboardMarkup(row_width=2)
+        markup.add(
+            types.InlineKeyboardButton("💰 Price", callback_data=f"edit_field:price:{gb}"),
+            types.InlineKeyboardButton("📦 Size (GB)", callback_data=f"edit_field:gb:{gb}"),
+            types.InlineKeyboardButton("📅 Days", callback_data=f"edit_field:days:{gb}"),
+            types.InlineKeyboardButton("⬅️ Back", callback_data=f"select_plan:{gb}")
+        )
+        
+        bot.edit_message_text(
+            f"📝 Editing {gb}GB Plan\nSelect what you want to change:",
+            chat_id=call.message.chat.id,
+            message_id=call.message.message_id,
+            reply_markup=markup
+        )
+    except Exception as e:
+        print(f"DEBUG: Error in handle_edit_plan: {str(e)}")
+        bot.answer_callback_query(call.id, text=f"Error: {str(e)}")
+
+@bot.callback_query_handler(func=lambda call: call.data.startswith("edit_field:"))
+def handle_edit_field(call):
+    if not is_admin(call.from_user.id):
+        return
+    try:
+        bot.answer_callback_query(call.id)
+        _, field, gb = call.data.split(':')
+        
+        if field == "price":
+            msg = bot.send_message(call.message.chat.id, f"Enter new price for {gb}GB plan:")
+            bot.register_next_step_handler(msg, process_update_price, gb)
+        elif field == "gb":
+            msg = bot.send_message(call.message.chat.id, f"Enter new size (GB) for {gb}GB plan:")
+            bot.register_next_step_handler(msg, process_update_gb, gb)
+        elif field == "days":
+            msg = bot.send_message(call.message.chat.id, f"Enter new duration (days) for {gb}GB plan:")
+            bot.register_next_step_handler(msg, process_update_days, gb)
+            
+    except Exception as e:
+        print(f"DEBUG: Error in handle_edit_field: {str(e)}")
+        bot.answer_callback_query(call.id, text=f"Error: {str(e)}")
+
+def process_update_price(message, gb):
+    try:
+        price = float(message.text.strip())
+        if price <= 0: raise ValueError("Price must be > 0")
+        
+        plans = load_plans()
+        if str(gb) in plans:
+            plans[str(gb)]['price'] = price
+            save_plans(plans)
+            bot.reply_to(message, f"✅ Price updated to ${price}")
+            
+            # Find index for back button
+            sorted_plans = sorted(plans.items(), key=lambda x: int(x[0]))
+            index = -1
+            for i, (k, _) in enumerate(sorted_plans):
+                if k == str(gb):
+                    index = i
+                    break
+            
+            if index != -1:
+                markup = types.InlineKeyboardMarkup()
+                markup.add(types.InlineKeyboardButton("⬅️ Back to Plan", callback_data=f"select_plan:{index}"))
+                bot.send_message(message.chat.id, "Select an action:", reply_markup=markup)
+        else:
+             bot.reply_to(message, "❌ Plan not found.")
+    except ValueError:
+        bot.reply_to(message, "❌ Invalid price. Please enter a valid number.")
+
+def process_update_gb(message, old_gb):
+    try:
+        new_gb = int(message.text.strip())
+        if new_gb <= 0: raise ValueError("Size must be > 0")
+        
+        plans = load_plans()
+        if str(old_gb) in plans:
+            if str(new_gb) in plans:
+                bot.reply_to(message, f"❌ Plan with {new_gb}GB already exists.")
+                return
+
+            # Update key
+            plans[str(new_gb)] = plans.pop(str(old_gb))
+            save_plans(plans)
+            bot.reply_to(message, f"✅ Size updated to {new_gb}GB")
+            
+            # Return to plan view (with new gb)
+            markup = types.InlineKeyboardMarkup()
+            markup.add(types.InlineKeyboardButton("⬅️ Back to Plan", callback_data=f"select_plan:{new_gb}")) # Wait, select_plan uses index...
+            # The select_plan handler uses index from sorted list. 
+            # If we change GB, the sort order changes. We can't easily jump back to select_plan:{index} without recalculating index.
+            # But wait, handle_plan_select uses index from call.data. 
+            # Let's just go back to main list.
+            
+            markup = types.InlineKeyboardMarkup()
+            markup.add(types.InlineKeyboardButton("📋 Back to List", callback_data="back_to_plans"))
+            bot.send_message(message.chat.id, "Select an action:", reply_markup=markup)
+
+        else:
+             bot.reply_to(message, "❌ Plan not found.")
+    except ValueError:
+        bot.reply_to(message, "❌ Invalid size. Please enter a valid number.")
+
+def process_update_days(message, gb):
+    try:
+        days = int(message.text.strip())
+        if days <= 0: raise ValueError("Days must be > 0")
+        
+        plans = load_plans()
+        if str(gb) in plans:
+            plans[str(gb)]['days'] = days
+            save_plans(plans)
+            bot.reply_to(message, f"✅ Duration updated to {days} days")
+            
+            markup = types.InlineKeyboardMarkup()
+            markup.add(types.InlineKeyboardButton("⬅️ Back to Plan", callback_data=f"select_plan:{gb}")) # This might be wrong index if sort changes, but here only days changed.
+            # actually select_plan callback data is index based on sorted keys.
+            # If we come from "Back to Plan" button, we need the INDEX.
+            # But here we only have GB.
+            # Let's find the index.
+            
+            sorted_plans = sorted(plans.items(), key=lambda x: int(x[0]))
+            index = -1
+            for i, (k, _) in enumerate(sorted_plans):
+                if k == str(gb):
+                    index = i
+                    break
+            
+            if index != -1:
+                markup = types.InlineKeyboardMarkup()
+                markup.add(types.InlineKeyboardButton("⬅️ Back to Plan", callback_data=f"select_plan:{index}"))
+                bot.send_message(message.chat.id, "Select an action:", reply_markup=markup)
+            else:
+                 bot.reply_to(message, "Error finding plan index.")
+
+        else:
+             bot.reply_to(message, "❌ Plan not found.")
+    except ValueError:
+        bot.reply_to(message, "❌ Invalid duration. Please enter a valid number.")
+
+
+
 @bot.callback_query_handler(func=lambda call: call.data.startswith("confirm_delete_plan:"))
 def handle_confirm_delete_plan(call):
+    if not is_admin(call.from_user.id):
+        return
     try:
         bot.answer_callback_query(call.id)
         gb = call.data.split(':')[1]
@@ -119,6 +279,8 @@ def handle_confirm_delete_plan(call):
 
 @bot.callback_query_handler(func=lambda call: call.data.startswith("delete_plan:"))
 def handle_plan_delete(call):
+    if not is_admin(call.from_user.id):
+        return
     try:
         bot.answer_callback_query(call.id)
         gb = call.data.split(':')[1]
@@ -145,6 +307,8 @@ def handle_plan_delete(call):
 
 @bot.callback_query_handler(func=lambda call: call.data == "back_to_plans")
 def handle_plan_navigation(call):
+    if not is_admin(call.from_user.id):
+        return
     try:
         bot.answer_callback_query(call.id)
         markup, plans_text, _ = create_plans_markup()
@@ -216,6 +380,8 @@ def process_new_plan_days(message, gb, price):
         )
 @bot.callback_query_handler(func=lambda call: call.data.startswith("unlimited_choice:"))
 def process_unlimited_choice(call):
+    if not is_admin(call.from_user.id):
+        return
     try:
         bot.answer_callback_query(call.id)
         _, choice, gb, price, days = call.data.split(':')
@@ -229,7 +395,7 @@ def process_unlimited_choice(call):
         
         unlimited_text = "Yes" if unlimited else "No"
         bot.edit_message_text(
-            f"? New plan added successfully:\n{gb}GB -  -  days\nUnlimited Users: {unlimited_text}",
+            f"✅ Plan saved successfully:\n{gb}GB - ${price} - {days} days\nUnlimited Users: {unlimited_text}",
             chat_id=call.message.chat.id,
             message_id=call.message.message_id
         )
