@@ -1,2 +1,3 @@
 ## v1.12.3
-🔧  enhanced config links display.
+🔧 restricted plan editing actions to admin users
+🔧 enhanced edit plan functionality
